js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib1/l1a.2.kt
inline fun fun1() = "fun1-2"
